# langgraph-messaging-integrations

./: .env.example  README.md  langgraph.json  pyproject.toml  test.py
src/graphs/: agent.py
src/langgraph_slack/: config.py  server.py
